# bioscreening-framework

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  generate_dataset.py
data/ligands/: ligand1.txt  ligand_001.sdf  ligand_002.sdf  ligand_003.sdf  ligand_004.sdf  ligand_005.sdf  ligand_006.sdf  ligand_007.sdf  ligand_008.sdf  ligand_009.sdf  ligand_010.sdf  ligand_011.sdf  ligand_012.sdf  ligand_013.sdf  ligand_014.sdf  ligand_015.sdf  ligand_016.sdf  ligand_017.sdf  ligand_018.sdf  ligand_019.sdf  ligand_020.sdf  ligand_021.sdf  ligand_022.sdf  ligand_023.sdf  ligand_024.sdf  ligand_025.sdf  ligand_026.sdf  ligand_027.sdf  ligand_028.sdf  ligand_029.sdf  ligand_030.sdf  ligand_031.sdf  ligand_032.sdf  ligand_033.sdf  ligand_034.sdf  ligand_035.sdf  ligand_036.sdf  ligand_037.sdf  ligand_038.sdf  ligand_039.sdf  (+61 more)
data/proteins/: protein1.txt
docs/: Architecture.md  DeveloperGuide.md  Installation.md  Overview.md  Usage.md
examples/: run_cuda.sh  run_mpi.sh  run_openmp.sh  run_sequential.sh
include/: DataManager.h  Docking.h  Molecule.h  Parallel.h  Utils.h
src/: DataManager.cpp  Docking.cpp  Molecule.cpp  Utils.cpp  main.cpp
src/Parallel/: CUDA.cu  MPI.cpp  OpenMP.cpp
src/parallel/hibrid/omp_cuda/: main.cpp
src/parallel/hibrid/omp_mpi/: main.cpp
src/parallel/single/cuda/: main.cpp  main.cu
src/parallel/single/mpi/: main.cpp
src/parallel/single/omp/: main.cpp
src/seq/: main.cpp
tests/: mpi.sh  omp.sh  omp_mpi.sh  test_CUDA.cu  test_DataManager.cpp  test_Docking.cpp  test_MPI.cpp  test_Molecule.cpp  test_OpenMP.cpp
